fix word wrap, delete email contact, add new avatar picture

--- a/assets/css/johndoe.css
+++ b/assets/css/johndoe.css
@@ -50,6 +50,11 @@
   box-sizing: border-box;
 }
 
+/*Custom email word wrap*/
+.email {
+  word-wrap: break-word;
+}
+
 html {
   font-family: sans-serif;
   line-height: 1.15;
@@ -11572,6 +11577,7 @@ pre .code {
   font-weight: bold;
   opacity: .8;
   color: #212529;
+  word-wrap: break-word;
 }
 
 .header-mini {
